--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   equatable: ^2.0.5
   rxdart: ^0.28.0
   uuid: ^4.4.2
+  sqflite: ^2.3.3+1
+  dio: ^5.6.0
 
 dev_dependencies:
   flutter_test:
