--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
+  get_it: ^7.6.4
   intl: ^0.19.0
   rxdart: ^0.27.7
   shared_preferences: ^2.2.2
@@ -20,6 +21,7 @@ dependencies:
   rive: ^0.9.1
   sqflite: ^2.3.3+1
   dio: ^5.6.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
